# OpenClassrooms_Project_04

./: .gitignore  README.md  controller.py  main.py  models.py  pyproject.toml  requirements.txt  view.py
flake8-report/: index.html
src/chesstools/: __init__.py  controllers.py  models.py  views.py
src/templates/: report_alphabetically_players_template.html  report_current_tournament_players_template.html  report_current_tournament_rounds_matches_template.html  report_tournaments_template.html
tests/: test_controller.py  test_players.py  test_tournament.py
